--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "scripts": {
     "dev": "vite build --watch --config ./vite.config.js",
-    "build": "vite build"
+    "build": "vite build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
   },
   "devDependencies": {
     "@vitest/coverage-v8": "^3.0.6",
