--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "scripts": {
     "dev": "vite build --watch --config ./vite.config.js",
+    "docs": "typedoc",
     "build": "vite build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
   },
@@ -31,6 +32,8 @@
     "@vitest/coverage-v8": "^3.0.6",
     "@vitest/ui": "^3.0.6",
     "prettier": "^3.5.1",
+    "typedoc": "^0.27.8",
+    "typedoc-plugin-markdown": "^4.4.2",
     "typescript": "^5.7.3",
     "vite-plugin-dts": "^4.5.0",
     "vite-tsconfig-paths": "^5.1.4",
